--- a/create_vm.yml
+++ b/create_vm.yml
@@ -1,11 +1,10 @@
-- hosts: localhost
+---
+- name: Create AWS Infrastructure
+  hosts: localhost
   connection: local
   gather_facts: False
-
   tasks:
-    - name: "Include AWS role"
+    - name: Including ec2 role for infrastructure creation
       include_role:
-        name: "create_sg"
-    - name: "Include AWS role"
-      include_role:
-        name: "create_instance"
+        name: role-ec2
+      
